Added basic styling page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
         var hitEndpointUrl = /*[[ @{'/hit'} ]]*/ '';
     </script>
     <script src="/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
     <h1>Black Jack</h1>
