--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head> 
-    <title>Black Jack</title> 
+
+<head>
+    <title>Black Jack</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <script th:inline="javascript">
         var hitEndpointUrl = /*[[ @{'/hit'} ]]*/ '';
@@ -9,40 +10,44 @@
     <script src="/script.js"></script>
     <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
+
 <body>
     <h1>Black Jack</h1>
-    <h2>Current Card</h2>
+    <h2>Current Turn</h2>
     <p th:text="${currentCard}"></p>
-    
+
     <h2>Dealer</h2>
-    <p th:text="score + ' ' + ${dealerScore}"></p>
-    <h3>Current Cards:</h3>
+    <p th:text="'Score: ' + ${dealerScore}"></p>
+    <p th:if="${dealerBust}" th:text="'BUST!'"></p>
+    <p th:unless="${dealerBust}" th:if="${playerBust}" th:text="'WINNER!'"></p>
+    <p th:if="${dealerWins}" th:text="'WINNER!'"></p>
+    <p th:if="${playerWins}" th:text="'LOSE!'"></p>
     <ul>
         <li th:each="card : ${dealerHand}" data-th-utext="${card.getUnicodeSuit()} + ' ' + ${card.getRank()}"></li>
     </ul>
-    
+
     <h2>Player</h2>
-    <p th:if="${dealerBust}" th:text="'Player Wins! ' + ${playerScore}"></p>
-    <p th:unless="${dealerBust}" th:if="${playerBust}" th:text="'Score: ' + ${playerScore} + ' BUST!'"></p>
-    <p th:unless="${dealerBust} or ${playerBust}" th:text="'Score: ' + ${playerScore}"></p>
-    
-    
+    <p th:text="'Score: ' + ${playerScore}"></p>
+
     <h3>Current Cards:</h3>
     <ul>
         <li th:each="card : ${playerHand}" data-th-utext="${card.getUnicodeSuit()} + ' ' + ${card.getRank()}"></li>
     </ul>
     
-    <div th:if="${playerBust}">
+    <div th:if="${dealerBust} or ${playerBust} or ${dealerWins} or ${playerWins}">
         <button>Next Hand?</button>
     </div>
-    <div th:unless="${playerBust}">
+    <div th:unless="${dealerBust} or ${playerBust} or ${dealerWins} or ${playerWins}">
         <button onclick="hit()">Hit</button>
         <button>Stand</button>
     </div>
     
+
     <h2>The Cards</h2>
     <ul>
-        <li th:each="card : ${deck}"  data-th-utext="${card.getId()} + ' ' + ${card.getRank()} + ' ' + ${card.getUnicodeSuit()}"></li>
+        <li th:each="card : ${deck}"
+            data-th-utext="${card.getId()} + ' ' + ${card.getRank()} + ' ' + ${card.getUnicodeSuit()}"></li>
     </ul>
 </body>
+
 </html>
