Removed sequencing from cards. Not really an issue

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,10 @@
 
 <body>
     <h1>Black Jack</h1>
-    <h2>Current Turn</h2>
+    <h2>Current Card in Deck</h2>
     <p th:text="${currentCard}"></p>
+     <h2>Current Turn</h2>
+    <p th:text="${currentTurn}"></p>
 
     <h2>Dealer</h2>
     <p th:text="'Score: ' + ${dealerScore}"></p>
