--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,3 +1,29 @@
-body {
-    background-color: gray;
+* {
+    padding:0;
+    margin:0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#title {
+    text-align: center;
+    font-weight: bold;
+    font-size:  50px;
+    padding: 10px; 
+}
+
+.turnHeading {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 10px;
+}
+
+.currentCardTracker,
+.currentTurnTracker
+ {
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
