--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -4,6 +4,10 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+ul {
+    list-style-type: none;
+}
+
 #title {
     text-align: center;
     font-weight: bold;
