--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -8,6 +8,13 @@ ul {
     list-style-type: none;
 }
 
+#container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
 #title {
     text-align: center;
     font-weight: bold;
