--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
             <p class="bust-color" th:if="${dealerBust}" th:text="'BUST!'"></p>
             <p class="winner-color" th:unless="${dealerBust}" th:if="${playerBust}" th:text="'WINNER!'"></p>
             <p class="winner-color" th:if="${dealerWins}" th:text="'WINNER!'"></p>
-            <p class="lose-color" th:if="${playerWins}" th:text="'LOSE!'"></p>
+            <p class="lose-color" th:if="${playerWins} and ${!dealerBust}" th:text="'LOSE!'"></p>
         </div>
         <ul class="card-list">
             <li th:each="card : ${dealerHand}">
@@ -63,7 +63,7 @@
             <p class="bust-color" th:if="${playerBust}" th:text="'BUST!'"></p>
             <p class="winner-color" th:unless="${playerBust}" th:if="${dealerBust}" th:text="'WINNER!'"></p>
             <p class="winner-color" th:if="${playerWins}" th:text="'WINNER!'"></p>
-            <p class="lose-color" th:if="${dealerWins}" th:text="'LOSE!'"></p>
+            <p class="lose-color" th:if="${dealerWins} and ${!playerBust}" th:text="'LOSE!'"></p>
         </div>
         <ul class="card-list">
             <li th:each="card : ${playerHand}">
