Updated Current Turn to cards played

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,8 +28,8 @@
         <p th:text="'Player: ' + ${numberOfPlayerWins}"></p>
     </div>
     <div id="currentTurnTracker">
-        <h2>Current Turn</h2>
-        <p th:text="${currentTurn}"></p>
+        <h2>Cards Played</h2>
+        <p th:text="${currentCard}"></p>
     </div>
 </header>
 
